# stealer

./: Cargo.toml  README.md
src/: browser.rs  main.rs
src/browser/: chromium.rs  firefox.rs  mozilla.rs
src/browser/chromium/: passwords.rs
src/browser/mozilla/: passwords.rs
