[package]
name = "stealer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
base64 = "0.21.7"
cbc = { version = "0.1.2", features = ["alloc"] }
der-parser = "9.0.0"
des = "0.8.1"
engine = "0.0.0"
hex = "0.4.3"
reqwest = { version = "0.11.24", features = ["blocking"] }
ring = "0.17.7"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sha1 = "0.10.6"
typenum = "1.17.0"
winapi = { version = "0.3.9", features = ["dpapi"]}

